(fix): #2808 - composer text overflowing

--- a/src/app/modules/composer/components/base/base.component.scss
+++ b/src/app/modules/composer/components/base/base.component.scss
@@ -34,7 +34,7 @@ m-composer__base {
     flex-direction: column;
     flex: 1;
     margin: 0;
-    padding: 21px 0 0;
+    padding: 20px 0 0;
   }
 
   .m-composerBase__error {
@@ -67,7 +67,7 @@ m-composer__base {
 
     m-composer__textArea .m-composer__textArea textarea {
       min-height: 0;
-      padding: 0 20px;
+      padding: 20px;
     }
 
     .m-composer__toolbar {
