--- a/src/app/modules/composer/components/text-area/text-area.component.scss
+++ b/src/app/modules/composer/components/text-area/text-area.component.scss
@@ -1,10 +1,11 @@
 m-composer__textArea {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
+  display: contents;
 
   .m-composer__textArea {
+    display: flex;
+    flex-direction: column;
     flex: 1;
+    overflow: hidden;
   }
 
   textarea {
@@ -38,7 +39,7 @@ m-composer__textArea {
   }
 
   .m-composerTextarea__title {
-    padding: 0 40px 20px;
+    padding: 20px 40px;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
